--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.24.9",
     "axios": "^1.9.0",
+    "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
